@@ -1,5 +1,6 @@
 2019.201:
 	- Change licensing to Apache License 2.
+	- Fix internal time calculation for years beyond 2038.
 
 2019.199:
 	- Support for IPv6 connections, conversion to pure getaddrinfo() usage.
